// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple fetch 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": false,
    "fields": Array [
      "permissions",
      "home5",
      "isAuthorized",
    ],
    "id": -1,
    "refs": Object {
      "staff": Object {
        "model": "organization.Staff",
        "type": 0,
      },
    },
    "type": "organization.Staff.Me",
  },
  "home5": true,
  "isAuthorized": true,
  "permissions": Array [
    "SYS_ADMIN",
  ],
  "staff": "XRA9koBTaA0000:gongyanyu",
}
`;

exports[`simple fetch 2`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "userId",
      "id",
      "avatar",
      "email",
      "cellphone",
      "note",
      "external",
      "order",
      "corporation",
      "roles",
    ],
    "id": "XRA9koBTaA0000:gongyanyu",
    "refs": Object {
      "defaultDepartment": Object {
        "model": "organization.Department",
        "type": 0,
      },
      "departments": Object {
        "model": "organization.Department",
        "type": 1,
      },
    },
    "type": "organization.Staff",
  },
  "active": true,
  "avatar": "",
  "cellphone": null,
  "code": "123321",
  "corporation": undefined,
  "corporationId": "XRA9koBTaA0000",
  "createTime": 1561368150495,
  "defaultDepartment": "XRA9koBTaA0000:19031410",
  "departments": Array [
    "XRA9koBTaA0000:19031410",
  ],
  "email": null,
  "external": false,
  "id": "XRA9koBTaA0000:gongyanyu",
  "name": "龚彥宇",
  "nameSpell": "GONGYANYU",
  "note": null,
  "order": Object {
    "XRA9koBTaA0000:19031410": "9043357214046142247",
  },
  "roles": undefined,
  "updateTime": 1574093411607,
  "userId": "tLwu5tpsk7etQAENLoON0giEiE",
  "version": 14,
}
`;

exports[`simple fetchModelRefs 1`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": false,
    "fields": Array [
      "permissions",
      "home5",
      "isAuthorized",
    ],
    "id": -2,
    "refs": Object {
      "staff": Object {
        "model": "organization.Staff",
        "type": 0,
      },
    },
    "type": "organization.Staff.Me",
  },
  "home5": true,
  "isAuthorized": true,
  "permissions": Array [
    "SYS_ADMIN",
  ],
  "staff": "XRA9koBTaA0000:gongyanyu",
}
`;

exports[`simple fetchModelRefs 2`] = `
Object {
  "__META__": Object {
    "MODEL_PERSISTED_FIELD": true,
    "fields": Array [
      "version",
      "active",
      "createTime",
      "updateTime",
      "name",
      "nameSpell",
      "code",
      "corporationId",
      "userId",
      "id",
      "avatar",
      "email",
      "cellphone",
      "note",
      "external",
      "order",
      "corporation",
      "roles",
    ],
    "id": "XRA9koBTaA0000:gongyanyu",
    "refs": Object {
      "defaultDepartment": Object {
        "model": "organization.Department",
        "type": 0,
      },
      "departments": Object {
        "model": "organization.Department",
        "type": 1,
      },
    },
    "type": "organization.Staff",
  },
  "active": true,
  "avatar": "",
  "cellphone": null,
  "code": "123321",
  "corporation": undefined,
  "corporationId": "XRA9koBTaA0000",
  "createTime": 1561368150495,
  "defaultDepartment": "XRA9koBTaA0000:19031410",
  "departments": Array [
    "XRA9koBTaA0000:19031410",
  ],
  "email": null,
  "external": false,
  "id": "XRA9koBTaA0000:gongyanyu",
  "name": "龚彥宇",
  "nameSpell": "GONGYANYU",
  "note": null,
  "order": Object {
    "XRA9koBTaA0000:19031410": "9043357214046142247",
  },
  "roles": undefined,
  "updateTime": 1574093411607,
  "userId": "tLwu5tpsk7etQAENLoON0giEiE",
  "version": 14,
}
`;
